--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "@prisma/client": "^4.11.0",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
-    "@types/mongoose": "^5.5.21",
     "@types/multer": "^1.4.6",
     "amqplib": "^0.6.0",
     "axios": "^0.21.0",
@@ -30,13 +30,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http-status-codes": "^2.1.2",
-    "inversify": "^5.0.1",
-    "inversify-express-utils": "^6.3.2",
+    "inversify": "^6.0.1",
+    "inversify-express-utils": "^6.4.3",
     "ioredis": "^4.17.3",
+    "jest-matcher-utils": "^28.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.10.3",
     "ms": "^2.1.2",
     "multer": "^1.4.2",
     "prom-client": "^12.0.0",
@@ -45,7 +45,6 @@
     "response-time": "^2.3.2",
     "shortid": "^2.2.16",
     "trim-request-body": "^1.0.1",
-    "ts-mongoose": "^0.0.21",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -59,9 +58,9 @@
     "@types/express-session": "^1.17.0",
     "@types/faker": "^5.5.6",
     "@types/hapi__joi": "^15.0.4",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.161",
-    "@types/mongoose": "^5.7.36",
     "@types/ms": "^0.7.31",
     "@types/redis": "^2.8.27",
     "@types/reflect-metadata": "^0.1.0",
@@ -71,14 +70,18 @@
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^3.4.4",
     "faker": "^5.5.3",
-    "jest": "^26.4.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.4",
+    "prisma": "^4.11.0",
     "sinon": "^11.1.2",
     "supertest": "^6.1.6",
-    "ts-jest": "^26.3.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.0.2"
   },
   "_moduleAliases": {
     "@app": "./dist"
+  },
+  "prisma": {
+    "schema": "./src/data/database/schema.prisma"
   }
 }
