--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 api_version="/api/v1"
-service_name="book-store"
+service_name="simple-bank"
 mongodb_url=mongodb://localhost:27017/book-store
 mongodb_username=""
 mongodb_password=""
@@ -12,4 +12,4 @@ amqp_url=amqp://localhost:5672
 CLOUDINARY_URL=cloudinary://792749198935837:mbJCgPbisgEDWWnbc87bZwTB1Rs@enterscale
 CLOUDINARY_API_KEY=792749198935837
 CLOUDINARY_API_SECRET=mbJCgPbisgEDWWnbc87bZwTB1Rs
-CLOUDINARY_CLOUD_NAME=enterscale
+CLOUDINARY_CLOUD_NAME=simplebank
